--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,16 @@
 html,
 body {
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  min-width: 100%;
 }
 
 .container {
-  width: 100%;
   background-image: url(../images/landing-plant-bg.png);
   background-position: center;
   background-size: cover;
   display: grid;
-  grid-gap: 3px;
-  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 6fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -18,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 1em;
 }
 
 /* HAMBURGER MENU */
@@ -34,7 +35,7 @@ button:focus {
 .hamburger {
   cursor: pointer;
   transition: transform 0.3s;
-  padding: 20px;
+  padding-left: 1em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -77,10 +78,11 @@ button:focus {
 /* ACCOUNT */
 
 .account {
-  margin-right: 20px;
+  margin-right: 1em;
 }
 
 .desk-account {
+  grid-row: 1 / 2;
   grid-column: 2 / -1;
   margin-right: 20px;
   justify-content: flex-end;
@@ -111,7 +113,9 @@ button:focus {
   flex-direction: column;
   list-style-type: none;
   grid-column: 1 / -1;
-  padding-left: 0;
+  grid-row: 2 / 4;
+  max-height: 345px;
+  padding-left: 0px;
 }
 
 .slogans > li {
@@ -122,31 +126,86 @@ button:focus {
 
 .CTA-landing {
   grid-column: 1 / -1;
+  grid-row: 4 / -1;
   text-align: center;
+  margin-bottom: 3em;
 }
 
-.CTA-3 {
+.CTA-large-green {
   width: 200px;
   height: 62px;
   background-color: #75995a;
   border-radius: 4px;
   padding: 0.5em;
-  margin-bottom: 5em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
   color: #fff;
   font-size: 24px;
 }
 
+/* CATEGORIES AND TESTIMONIAL SECTION */
+
+/* CATEGORIES AND TESTIMONIAL SECTION */
+
+.categories-testimonial-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.categories {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-rows: repeat(2, 280px);
+  margin: 2em;
+}
+
+.categ {
+  border: 1px solid #c8c8be;
+  border-radius: 10px;
+  width: 280px;
+  height: 280px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: 28px;
+  color: #90918a;
+  text-decoration: none;
+}
+
+.categ > span {
+  display: block;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 @media (max-width: 500px) {
   .container > .desktop {
     display: none;
   }
+  .container {
+    height: 75vh;
+  }
 }
 
 @media (min-width: 500px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
   .container > .account,
   .hamburger {
     display: none;
+  }
+  .logo {
+    justify-content: flex-start;
+    margin-left: 20px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+}
+
+@media (min-width: 720px) {
+  .slogans > li {
+    font-size: 72px;
   }
 }
