--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
   min-width: 100%;
 }
 
-.container {
+.top-container {
   background-image: url(../images/landing-plant-bg.png);
   background-position: center;
   background-size: cover;
@@ -147,8 +147,9 @@ button:focus {
 
 /* CATEGORIES AND TESTIMONIAL SECTION */
 
-.categories-testimonial-container {
+.categories-container {
   margin-top: 6em;
+  margin-bottom: 6em;
 }
 
 .categories {
@@ -178,21 +179,102 @@ button:focus {
   height: auto;
 }
 
+.testimonials-container {
+  background-image: url(../images/watercolor_testimonial_bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-bottom: 6em;
+  /* display: grid;
+  grid-template-columns: 1fr 4fr 1fr; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+}
+
+.testimonials,
+#testimonials-prev,
+#testimonials-next {
+  display: inline-flex;
+}
+
+.testimonials {
+  width: 50%;
+}
+
+#testimonials-prev,
+#testimonials-next {
+  width: 10%;
+  margin: 0 2em;
+}
+
+.carousel-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-btn > a {
+  padding: 3em;
+}
+
+.owl-stage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.owl-dots {
+  margin-top: 2em;
+  display: flex;
+  justify-content: center;
+}
+
+.owl-dot {
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  margin: 2em 1em;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #fff;
+}
+
+.owl-dot.active {
+  background-color: #d5ff00;
+}
+
+.quote {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: 1.5em;
+  color: #fff;
+}
+
+.who-quote {
+  font-weight: 400;
+  font-size: 0.8em;
+}
+
 @media (max-width: 500px) {
-  .container > .desktop {
+  .top-container > .desktop {
     display: none;
   }
-  .container {
+  .top-container {
     height: 75vh;
+  }
+  .quote {
+    font-size: 1.2em;
   }
 }
 
 @media (min-width: 500px) {
-  .container {
+  .top-container {
     grid-template-columns: 1fr 1fr;
   }
-  .container > .account,
-  .hamburger {
+  .top-container > .mobile {
     display: none;
   }
   .logo {
