--- a/css/checkout.css
+++ b/css/checkout.css
@@ -15,7 +15,7 @@
 .checkout-progress-text {
   text-align: center;
   font-family: 'Open-Sans', sans-serif;
-  font-size: 14px;
+  font-size: 0.8em;
   color: #000;
 }
 
