thank you and review page made responsive

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .CTA-large-green {
   width: auto;
-  height: 62px;
+  height: auto;
   background-color: #75995a;
   border-radius: 4px;
   padding: 0.5em;
