--- a/css/footer.css
+++ b/css/footer.css
@@ -17,7 +17,7 @@
 }
 
 .footer-container {
-  background-color: #f0f0f0;
+  background-color: #E0E0E0;
   width: 100vw;
   display: flex;
   flex-direction: column;
