--- a/css/gallery.css
+++ b/css/gallery.css
@@ -63,10 +63,14 @@
   margin-bottom: 2em;
 }
 
+
 .main-gallery-container {
   padding-top: 2em;
   grid-column: 4 / 12 ;
   margin-left: 2em;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .color {
@@ -107,6 +111,29 @@
   color: #607848;
 }
 
+.price-slider-container {
+  margin-top: 2em;
+}
+
+#custom-handle {
+  width: 3em;
+  height: 1.6em;
+  top: 50%;
+  margin-top: -.8em;
+  text-align: center;
+  line-height: 1.6em;
+
+}
+
+#custom-handleb {
+  width: 3em;
+  height: 1.6em;
+  top: 50%;
+  margin-top: -.8em;
+  text-align: center;
+  line-height: 1.6em;
+}
+
 .top-header {
   display: flex;
   justify-content: space-between;
@@ -121,21 +148,201 @@
   margin-top: 0;
 }
 
+.easy-header {
+  display: none;
+}
+
 .search_icon {
   margin-right: 11em;
 }
 
+.easy-top-container {
+  display: none;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.easy-top-text{
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 1.25em;
+  color: #000;
+  font-weight: 400;
+  margin-bottom: 1em;
+  margin-top: 0;
+}
+
+.easy-icon-row {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: repeat(auto-fit , minmax(215px, 1fr));
+  grid-template-rows: 1fr;
+
+}
+
+.easy-icon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;;
+
+}
+
+.icon-inactive {
+  margin: 13px;
+}
+
+.easy-icon-text {
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 1.12em;
+  color: #75995A;
+  font-weight: 400;
+  text-align: center;
+}
+
+.icon-active {
+  display: none;
+}
+
 .items-container {
   display: grid;
-  grid-gap: 1.5em;
+  grid-gap: 1em;
   grid-template-columns: repeat(auto-fit , minmax(215px, 1fr));
   grid-template-rows: repeat(auto-fit , minmax(366px, 1fr));
+  width:
+}
+
+.item {
+  position: relative;
+  margin-bottom: 2.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 10em;
+  height: auto;
+  padding-top: 1em;
+}
+
+.item-overlay {
+  opacity: 0;
+  position: absolute;
+  top: -0.2em;
+  z-index: 2;
+  width: 120%;
+  height: 80%;
+  background: linear-gradient(rgba(60,99,40,0.9) 35%, rgba(255,255,255, .6) 80%, rgba(255, 255, 255, 0) 98%);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 1em;
+}
+
+.overlay-text {
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 2em;
+  color: #fff;
+  font-weight: 400;
 }
 
 .item-title {
-
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 1.25em;
+  font-weight: 400;
+  color: #000;
+  margin-bottom: .5em;
+  text-align: center;
 }
 
 .item-subtitle {
-  
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color: #000;
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+
+.item-price {
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 1em;
+  font-weight: 800;
+  color: #000;
+  margin-top: 0;
+  margin-bottom: 1em;
+}
+
+.item-size-row {
+  margin-top: 0;
+  margin-bottom: .75em;
+}
+
+.care-icon-row {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  padding-bottom: 0.75em;
+}
+
+.button-row {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+}
+
+.CTA-cart {
+  border: 1px solid #75995A;
+  border-radius: 4px;
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 0.875em;
+  font-weight: 600;
+  color: #75995A;
+  height: 37px;
+}
+
+.CTA-cart:hover {
+  color: white;
+  background-color: #75995A;
+  font-weight: 400;
+}
+
+.CTA-wishlist {
+  border: 1px solid #75995A;
+  border-radius: 4px;
+  height: 37px;
+  margin-left: .5em;
+  font-size: 1em;
+  color: #75995A;
+}
+
+.CTA-wishlist:hover {
+  background-color: #75995A;
+  color: white;
+}
+
+.easy-item {
+  display: none;
+}
+
+.next-prev-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2em;
+  margin-top: -1em;
+  width: 100%;
+}
+
+.prev, .next {
+  color: #75995A;
+  font-size: 2em;
+}
+
+.next-prev-container > h6 {
+  font-family: 'Open-Sans', sans-serif;
+  font-size: 1.5em;
+  font-weight: 400;
+  color: #75995A;
+  padding: 0 1em;
 }
