--- a/css/cart.css
+++ b/css/cart.css
@@ -33,7 +33,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #f2f2f2;
+  background-color: #e2e2e2;
   height: 40vh;
   width: 90vw;
   max-width: 1000px;
@@ -121,7 +121,7 @@ input[type='number'] {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  background-color: #f2f2f2;
+  background-color: #e2e2e2;
 }
 
 .subtotal-text {
@@ -181,7 +181,7 @@ input[type='number'] {
   align-items: center;
   width: 90vw;
   max-width: 600px;
-  background-color: #f0f0f0;
+  background-color: #e2e2e2;
 }
 
 .estimate-row:nth-of-type(3) {
