--- a/css/index.css
+++ b/css/index.css
@@ -129,6 +129,7 @@ button:focus {
   grid-row: 4 / -1;
   text-align: center;
   margin-bottom: 3em;
+  cursor: pointer;
 }
 
 .CTA-large-green {
@@ -141,6 +142,7 @@ button:focus {
   font-weight: 800;
   color: #fff;
   font-size: 24px;
+  cursor: pointer;
 }
 
 /* CATEGORIES AND TESTIMONIAL SECTION */
@@ -481,6 +483,7 @@ p {
   font-weight: 800;
   color: #607848;
   font-size: 24px;
+  cursor: pointer;
 }
 
 @media (max-width: 500px) {
